--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,21 @@
 ---
-
+import "../styles/global.css";
 ---
 
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" href="/favicon.ico" type="image/x-icon">
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>Readly</title>
 	</head>
 	<body>
-		<h1>Astro</h1>
+		<h1 class="text-3xl font-bold underline text-[6B0504] text-center">
+			 Readly!
+			</h1>
+		<p>Welcome to Readly! This is a website that is here for all your reading needs!</p>
+		<a href="/recommend/">Want a recommended book? Click here!</a> 
+		<a href="/search/">Want to find your next favourite book? Click here!</a>
 	</body>
 </html>
