--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,16 @@
 ---
 import "../styles/global.css";
 ---
-<section class="min-h-screen flex items-center justify-center">
-  <p class="text-red-500 text-3xl font-bold">
-Readly!
-  </p>
+<section class="Heading">
+<h1 class="bg-[#DDD5D0] text-[#0A122A] text-3xl text-center">Readly</h1>
+<div class="bg-[#DDD5D0] min-h-screen">
+<nav class="flex flex-col md:flex-row gap-4 md:gap-6 justify-center px-6 py-4 ">
+  <a href="/">Home</a>
+  <a href="/reviews">Reviews</a>
+  <a href="/recommend">Recommendations</a>
+  <a href="/PostCard">Posts</a>
+</nav>
+</div>
 </section>
+
+
