created page where user can submit book reviews

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,10 +6,11 @@ import "../styles/global.css";
 <div class="bg-[#DDD5D0] min-h-screen">
 <nav class="flex flex-col md:flex-row gap-4 md:gap-6 justify-center px-6 py-4 ">
   <a href="/">Home</a>
-  <a href="/reviews">Reviews</a>
+  <a href="/reviews">Explore</a>
   <a href="/recommend">Recommendations</a>
   <a href="/PostCard">Posts</a>
 </nav>
+
 </div>
 </section>
 
