--- a/src/pages/reviews.astro
+++ b/src/pages/reviews.astro
@@ -1,19 +1,15 @@
 ---
-import MainLayout from "../layouts/MainLayout.astro";
+import "../styles/global.css";
 ---
 
-<MainLayout title="Review">
-  <section class="page">
-    <header class="header">
-      <h1>My Reviews</h1>
-      <p>What ya reading?</p>
-    </header>
-
-    <div class="card-grid">
-      <a href="/submit" class="create-card">
-        <span class="plus">+</span>
-        <p>Add Review</p>
-      </a>
-    </div>
-  </section>
-</MainLayout>
+<section class="Heading">
+<h1 class="bg-[#DDD5D0] text-[#0A122A] text-3xl text-center">Readly</h1>
+<div class="bg-[#DDD5D0] min-h-screen">
+<nav class="flex flex-col md:flex-row gap-4 md:gap-6 justify-center px-6 py-4 ">
+  <a href="/">Home</a>
+  <a href="/reviews">Explore</a>
+  <a href="/recommend">Recommendations</a>
+  <a href="/PostCard">Posts</a>
+</nav>
+</div>
+</section>
