created the review page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import "../styles/global.css";
 ---
 <section class="Heading">
-<h1 class="bg-[#DDD5D0] text-[#0A122A] text-3xl text-center">Readly</h1>
+<h1 class="bg-[#DDD5D0] text-[#0A122A] text-3xl text-center font=sans">Readly</h1>
 <div class="bg-[#DDD5D0] min-h-screen">
 <nav class="flex flex-col md:flex-row gap-4 md:gap-6 justify-center px-6 py-4 ">
   <a href="/">Home</a>
@@ -10,8 +10,5 @@ import "../styles/global.css";
   <a href="/recommend">Recommendations</a>
   <a href="/PostCard">Posts</a>
 </nav>
-
 </div>
 </section>
-
-
