--- a/src/pages/reviews.astro
+++ b/src/pages/reviews.astro
@@ -1,15 +1,18 @@
 ---
 import "../styles/global.css";
 ---
-
 <section class="Heading">
 <h1 class="bg-[#DDD5D0] text-[#0A122A] text-3xl text-center">Readly</h1>
-<div class="bg-[#DDD5D0] min-h-screen">
-<nav class="flex flex-col md:flex-row gap-4 md:gap-6 justify-center px-6 py-4 ">
+<nav class=" bg-[#DDD5D0] flex flex-col md:flex-row gap-4 md:gap-6 justify-center px-6 py-4 ">
   <a href="/">Home</a>
   <a href="/reviews">Explore</a>
   <a href="/recommend">Recommendations</a>
   <a href="/PostCard">Posts</a>
 </nav>
-</div>
 </section>
+<section class="Review">
+      <h2 class = "bg-[#DDD5D0]">Hatchetfield Universe:</h2>
+      <p class = "bg-[#DDD5D0]">The Hatchetfield Universe is a fictional world created by Team StarKid.</p>
+  </section>
+
+
