--- a/src/pages/new.astro
+++ b/src/pages/new.astro
@@ -1,15 +1,8 @@
 ---
+import { Debug } from 'astro:components';
 import "../styles/global.css";
+import BaseLayout from "../layouts/BaseLayout.astro";
+import MyForm from "../components/ProjectForm.jsx";
 ---
 
-<section class="Nav Bar">
-<div class="bg-[#A3B4A2] min-h-screen">
-<nav class="flex flex-col md:flex-row gap-4 md:gap-6 justify-center px-6 py-4 ">
-<a href="/">Home</a>
-<a href="/reviews">Explore</a>
-<a href="/recommend">Recommendations</a>
-<a href="/PostCard">Posts</a>
-</nav>
-<h2 class = "bg-[#DDD5D0] text-[#0A122A] text-3xl text-center">Create a new book review!</h2>
-</div>
-</section>
+<MyForm client:load />
